[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/color-picker.png" type="Texture" id=2]
[ext_resource path="res://scenes/ColorSelectMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/main-menu2.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Hardpixel.OTF" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 239, 15, 51, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 48, 9, 9 )

[sub_resource type="DynamicFont" id=4]
size = 19
font_data = ExtResource( 5 )

[node name="OptionsMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.943878
margin_top = 0.594604
margin_right = -0.943848
margin_bottom = 0.594604
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -250.0
margin_right = 260.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 490 )
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="HBoxContainer" parent="Texture"]
anchor_right = 1.0
margin_bottom = 88.0
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Texture/TopContainer"]
margin_left = 420.0
margin_right = 510.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
mouse_default_cursor_shape = 2
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 5

[node name="PlayerSpriteButton" type="TextureButton" parent="Texture"]
margin_left = 70.0
margin_top = 120.0
margin_right = 140.0
margin_bottom = 190.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteLabel" type="Label" parent="Texture"]
margin_left = 220.0
margin_top = 130.0
margin_right = 260.0
margin_bottom = 180.0
rect_min_size = Vector2( 190, 50 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player Color"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticleColorButton" type="TextureButton" parent="Texture"]
margin_left = 70.0
margin_top = 210.0
margin_right = 140.0
margin_bottom = 280.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticleLabel" type="Label" parent="Texture"]
margin_left = 220.0
margin_top = 220.0
margin_right = 410.0
margin_bottom = 180.0
rect_min_size = Vector2( 190, 50 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Particles Color"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="BackgroundColorButton" type="TextureButton" parent="Texture"]
margin_left = 70.0
margin_top = 300.0
margin_right = 140.0
margin_bottom = 370.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLabel" type="Label" parent="Texture"]
margin_left = 220.0
margin_top = 310.0
margin_right = 410.0
margin_bottom = 180.0
rect_min_size = Vector2( 190, 50 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Background Color"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="MazeColorButton" type="TextureButton" parent="Texture"]
margin_left = 70.0
margin_top = 390.0
margin_right = 140.0
margin_bottom = 460.0
rect_min_size = Vector2( 70, 70 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 6
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MazeLabel" type="Label" parent="Texture"]
margin_left = 220.0
margin_top = 400.0
margin_right = 410.0
margin_bottom = 180.0
rect_min_size = Vector2( 190, 50 )
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Maze Color"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="PlayerSpriteSelect" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 494.681
margin_top = 165.777
margin_right = -285.318
margin_bottom = -354.223

[node name="ParticleColorSelect" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 494.681
margin_top = 255.668
margin_right = -285.318
margin_bottom = -264.332

[node name="BackgroundSelect" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 494.791
margin_top = 344.886
margin_right = -285.209
margin_bottom = -175.114

[node name="MazeColorSelect" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 495.245
margin_top = 435.995
margin_right = -284.755
margin_bottom = -84.0048
[connection signal="pressed" from="Texture/TopContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Texture/PlayerSpriteButton" to="." method="_on_PlayerSpriteButton_pressed"]
[connection signal="pressed" from="Texture/ParticleColorButton" to="." method="_on_ParticleColorButton_pressed"]
[connection signal="pressed" from="Texture/BackgroundColorButton" to="." method="_on_BackgroundColorButton_pressed"]
[connection signal="pressed" from="Texture/MazeColorButton" to="." method="_on_MazeColorButton_pressed"]
